# static_sdd

./: Cargo.toml  README.md
crates/dyn_grammar/: Cargo.toml
crates/dyn_grammar/src/: expansion.rs  lib.rs  non_terminal.rs  production.rs  symbol.rs  symbolic_grammar.rs  token.rs
crates/dyn_grammar/src/enriched_grammar/: mod.rs  non_terminal.rs  production.rs  token.rs
crates/dyn_grammar/src/grammar/: mod.rs  production.rs  symbol.rs
crates/dyn_grammar/src/lalr/: atutomaton.rs  equation.rs  item.rs  mod.rs
crates/dyn_grammar/src/parsing/: action.rs  tables.rs
crates/dyn_grammar/src/slr/: automaton.rs  item.rs  mod.rs
crates/dyn_grammar/src/symbolic_grammar/: mod.rs
crates/from_inherited/: Cargo.toml
crates/from_inherited/src/: lib.rs
crates/grammar/: Cargo.toml
crates/grammar/src/: constructor.rs  grammar_extraction.rs  item_injections.rs  lib.rs
crates/inherited/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  results.rs  symbol.rs  traits.rs
crates/production/src/: lib.rs
examples/addition/: main.rs
examples/advanced/chess/: board.rs  chess_move.rs  grammar.rs  main.rs  piece.rs  tile.rs
examples/ambiguous/: main.rs
examples/ambiguous/expressions/: main.rs
examples/array_type/: main.rs
examples/ast/: main.rs
examples/balanced/: main.rs
examples/basic/addition/: main.rs
examples/basic/addition-ast/: main.rs
examples/basic/arithmetic/: main.rs
examples/basic/balanced/: main.rs
examples/basic/boolean/: main.rs
examples/generic_addition/: main.rs
examples/generics/addition/: main.rs
examples/inheritance/array-typing/: main.rs
examples/inheritance/correct-operator/: main.rs
examples/inheritance/three-address-code/: main.rs
examples/sat/: main.rs
src/: lib.rs
