[package]
name = "static_sdd"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["crates/*"]

[dependencies]
grammar = { path = "crates/grammar" }
production = { path = "crates/production" }
from_inherited = { path = "crates/from_inherited" }

[[example]]
name = "basic-addition"
path = "./examples/basic/addition/main.rs"

[[example]]
name = "addition-ast"
path = "./examples/basic/addition-ast/main.rs"

[[example]]
name = "balanced"
path = "./examples/basic/balanced/main.rs"

[[example]]
name = "boolean"
path = "./examples/basic/boolean/main.rs"

[[example]]
name = "generic-addition"
path = "./examples/generics/addition/main.rs"

[[example]]
name = "ambiguous-expressions"
path = "./examples/ambiguous/expressions/main.rs"

[[example]]
name = "array-typing"
path = "./examples/inheritance/array-typing/main.rs"

[[example]]
name = "correct-operator"
path = "./examples/inheritance/correct-operator/main.rs"

[[example]]
name = "three-address-code"
path = "./examples/inheritance/three-address-code/main.rs"

[[example]]
name = "chess"
path = "./examples/advanced/chess/main.rs"
